# Clawsmith

./: .env.example  .gitignore  CONTRIBUTING.md  IDENTITY.md  INSTALL.md  LICENSE  MEMORY.md  README.md  SOUL.md  USER.md  improvement_suggestions.txt  install.ps1  install.sh  pyproject.toml
.openclaw/: workspace-state.json
agents/: __init__.py  base.py  capabilities.py  detector.py  registry.py  router.py
config/: __init__.py  config_loader.py  openclaw_skill.yaml  settings.yaml
discovery/: __init__.py  hardware.py  profile.py  toolchain.py
docs/: README.md  agent_profiles.md  architecture.md  bat_templates.md  chat_first_architecture.md  openclaw_integration.md  python_style_guide.md  troubleshooting.md
execution/: __init__.py  backend.py  cli_agent.py  llm_backend.py  models.py  phase_executor.py  prompt_builder.py  run_logger.py  spec_prompt_builder.py
install/: __init__.py  downloader.py  models.py  provisioner.py  runtime_manager.py
jobs/: __init__.py  allowlist.py  bat_generator.py  cursor_runner.py  executor.py  profile_loader.py  schema_validator.py  template_renderer.py
mcp_server/: __init__.py  __main__.py  server.py
memory/: 2026-03-17.md
memory_skill/: __init__.py  always_remember.py  models.py  reader.py  retriever.py  sync.py  writer.py
mutation_engine/: __init__.py  differ.py  engine.py  models.py
orchestrator/: __init__.py  __main__.py  agent_status.py  chat_runtime.py  cli.py  doctor.py  forge.py  git_ops.py  logging_setup.py  onboard.py  pipeline.py  plan_writer.py  planner.py  preflight.py  prompt_generator.py  schemas.py  session_state.py  smoke.py  spec_generator.py  task_queue.py  verifier.py  yolo.py
prompts/: __init__.py  generator.py
providers/: __init__.py  base.py  litellm_provider.py  openclaw_adapter.py  openclaw_client.py  openclaw_webhook.py  registry.py
recommendation/: __init__.py  catalog.py  engine.py  models.py
repo_graph/: __init__.py  linker.py  models.py  scanner.py
roadmap/: goals.md
routing/: __init__.py  classifier.py  cost_estimator.py  router.py
scope_engine/: __init__.py  engine.py  models.py
skills/: __init__.py  executor.py  generator.py  models.py  openclaw_adapter.py  registry.py  resolver.py
specs/: product_schema.json
tests/: __init__.py  conftest.py  test_agent_detection.py  test_bat_generator.py  test_chat_runtime.py  test_config_loader.py  test_context_packer.py  test_forge_verifier.py  test_job_validator.py  test_llm_chat.py  test_memory_retrieval.py  test_model_router.py  test_openclaw_integration.py  test_openclaw_skills.py  test_packaging.py  test_packaging_imports.py  test_plan_writer.py  test_planner.py  test_repo_auditor.py  test_skill_execution.py  test_skill_system.py  test_spec_generator.py  test_spec_prompt_builder.py  test_task_classifier.py  test_task_queue.py  test_verifier.py  test_yolo.py
tools/: __init__.py  build_detector.py  context_packer.py  repo_auditor.py  repo_mapper.py
tui/: __init__.py  commands.py  llm_chat.py  models.py  renderer.py  session.py  theme.py  (+3 more)
(+44 files in other folders)
