[project]
name = "clawsmith"
version = "0.1.0"
description = "Local-first AI orchestration — routes coding tasks to the cheapest capable model."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "mcp[cli]>=1.7.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
    "litellm>=1.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
clawsmith = "orchestrator.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "mcp_server*", "providers*", "routing*", "tools*", "jobs*", "config*", "prompts*", "agents*", "discovery*", "recommendation*", "install*", "memory_skill*", "repo_graph*", "scope_engine*", "mutation_engine*", "tui*", "execution*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
